--- a/tools/config-generator/templates/prow/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow/prow_plugins.yaml
@@ -111,6 +111,7 @@ plugins:
   - lgtm
   - lifecycle
   - milestone
+  - override
   - owners-label
   - project
   - shrug
@@ -140,6 +141,7 @@ plugins:
   - lgtm
   - lifecycle
   - milestone
+  - override
   - owners-label
   - project
   - shrug
