Fixing config check job error by adding missing volumeMounts (#2227)
* Fixing config check job error by adding missing volumeMounts

* Move to trusted cluster

--- a/config/prod/prow/jobs/custom/test-infra.yaml
+++ b/config/prod/prow/jobs/custom/test-infra.yaml
@@ -17,13 +17,14 @@ presubmits:
   - name: pull-test-infra-validate-prow-yaml
     decorate: true
     run_if_changed: "^config/prod/prow/(cluster|core|jobs)/.*.yaml$"
-    cluster: "build-knative"
+    cluster: "prow-trusted"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests:stable
         command:
-        - "./config/prod/prow/check_config.sh"
+        - "runner.sh"
         args:
+        - "./config/prod/prow/check_config.sh"
         - "$(REPO_OWNER)/$(REPO_NAME)"
         securityContext:
           privileged: true
@@ -32,6 +33,10 @@ presubmits:
           value: "true"
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
+        volumeMounts:
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
       volumes:
       - name: docker-graph
         emptyDir: {}
