Move sample-source to knative-sandbox
Related: https://github.com/knative/community/issues/153

--- a/config/prod/prow/jobs/config.yaml
+++ b/config/prod/prow/jobs/config.yaml
@@ -1887,13 +1887,13 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  knative/sample-source:
-  - name: pull-knative-sample-source-build-tests
+  knative-sandbox/sample-source:
+  - name: pull-knative-sandbox-sample-source-build-tests
     agent: kubernetes
-    context: pull-knative-sample-source-build-tests
+    context: pull-knative-sandbox-sample-source-build-tests
     always_run: true
-    rerun_command: "/test pull-knative-sample-source-build-tests"
-    trigger: "(?m)^/test (all|pull-knative-sample-source-build-tests),?(\\s+|$)"
+    rerun_command: "/test pull-knative-sandbox-sample-source-build-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-sample-source-build-tests),?(\\s+|$)"
     decorate: true
     path_alias: knative.dev/sample-source
     cluster: "build-knative"
@@ -1925,12 +1925,12 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  - name: pull-knative-sample-source-unit-tests
+  - name: pull-knative-sandbox-sample-source-unit-tests
     agent: kubernetes
-    context: pull-knative-sample-source-unit-tests
+    context: pull-knative-sandbox-sample-source-unit-tests
     always_run: true
-    rerun_command: "/test pull-knative-sample-source-unit-tests"
-    trigger: "(?m)^/test (all|pull-knative-sample-source-unit-tests),?(\\s+|$)"
+    rerun_command: "/test pull-knative-sandbox-sample-source-unit-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-sample-source-unit-tests),?(\\s+|$)"
     decorate: true
     path_alias: knative.dev/sample-source
     cluster: "build-knative"
@@ -7768,17 +7768,17 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "16 * * * *"
-  name: ci-knative-sample-source-continuous
+- cron: "50 * * * *"
+  name: ci-knative-sandbox-sample-source-continuous
   agent: kubernetes
   labels:
     prow.k8s.io/pubsub.project: knative-tests
     prow.k8s.io/pubsub.topic: knative-monitoring
-    prow.k8s.io/pubsub.runID: ci-knative-sample-source-continuous
+    prow.k8s.io/pubsub.runID: ci-knative-sandbox-sample-source-continuous
   decorate: true
   cluster: "build-knative"
   extra_refs:
-  - org: knative
+  - org: knative-sandbox
     repo: sample-source
     base_ref: master
     path_alias: knative.dev/sample-source
@@ -7804,17 +7804,17 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "56 8,11,22 * * *"
-  name: ci-knative-sample-source-continuous-beta-prow-tests
+- cron: "6 8,11,22 * * *"
+  name: ci-knative-sandbox-sample-source-continuous-beta-prow-tests
   agent: kubernetes
   labels:
     prow.k8s.io/pubsub.project: knative-tests
     prow.k8s.io/pubsub.topic: knative-monitoring
-    prow.k8s.io/pubsub.runID: ci-knative-sample-source-continuous
+    prow.k8s.io/pubsub.runID: ci-knative-sandbox-sample-source-continuous
   decorate: true
   cluster: "build-knative"
   extra_refs:
-  - org: knative
+  - org: knative-sandbox
     repo: sample-source
     base_ref: master
     path_alias: knative.dev/sample-source
