--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -218,7 +218,7 @@ presubmits:
     dot-dev: true
   - unit-tests: true
     dot-dev: true
-  knative/sample-source:
+  knative-sandbox/sample-source:
   - build-tests: true
     dot-dev: true
   - unit-tests: true
@@ -705,7 +705,7 @@ periodics:
   knative-sandbox/sample-controller:
   - continuous: true
     dot-dev: true
-  knative/sample-source:
+  knative-sandbox/sample-source:
   - continuous: true
     dot-dev: true
   knative/test-infra:
