--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -338,6 +338,13 @@ presubmits:
     args:
     - --run-test
     - ./test/e2e-upgrade-tests.sh
+  knative-sandbox/discovery:
+  - build-tests: true
+    dot-dev: true
+  - unit-tests: true
+    dot-dev: true
+  - integration-tests: true
+    dot-dev: true
   knative-sandbox/eventing-kafka:
   - build-tests: true
     dot-dev: true
@@ -855,6 +862,19 @@ periodics:
         memory: 12Gi
       limits:
         memory: 16Gi
+  - nightly: true
+    dot-dev: true
+  - dot-release: true
+    dot-dev: true
+    env-vars:
+    - ORG_NAME=knative-sandbox
+  - auto-release: true
+    dot-dev: true
+    env-vars:
+    - ORG_NAME=knative-sandbox
+  knative-sandbox/discovery:
+  - continuous: true
+    dot-dev: true
   - nightly: true
     dot-dev: true
   - dot-release: true
