--- a/config/prod/prow/jobs/custom/test-infra.yaml
+++ b/config/prod/prow/jobs/custom/test-infra.yaml
@@ -268,11 +268,10 @@ periodics:
     - name: flaky-test-reporter-slack-token
       secret:
         secretName: flaky-test-reporter-slack-token
-- cron: "0 20 * * 1"
+- cron: "15 15-23 * * 1-5"  # Run at 7:15-15:15 PST (15:15 UTC) Mon-Fri
   name: ci-knative-prow-auto-bumper
-  agent: kubernetes
+  cluster: prow-trusted
   decorate: true
-  cluster: "build-knative"
   extra_refs:
   - org: knative
     repo: test-infra
@@ -280,18 +279,13 @@ periodics:
     path_alias: knative.dev/test-infra
   spec:
     containers:
-    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-      imagePullPolicy: Always
+    - image: gcr.io/k8s-prow/autobump:v20200622-168a90f1b0
       command:
-      - "runner.sh"
+      - /autobump.sh
       args:
-      - "go"
-      - "run"
-      - "./tools/prow-auto-bumper/."
-      - "--github-account=/etc/prow-auto-bumper-github-token/token"
-      - "--git-userid=knative-prow-updater-robot"
-      - "--git-username='Knative Prow Updater Robot'"
-      - "--git-email=knative-prow-updater-robot@google.com"
+      - /etc/prow-auto-bumper-github-token/token
+      - "Knative Prow Updater Robot"
+      - knative-prow-updater-robot@google.com
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
@@ -299,9 +293,19 @@ periodics:
       - name: prow-auto-bumper-github-token
         mountPath: /etc/prow-auto-bumper-github-token
         readOnly: true
-      - name: prow-updater-robot-ssh-key
-        mountPath: /root/.ssh
-        readOnly: true
+      env:
+      - name: GH_ORG
+        value: knative
+      - name: GH_REPO
+        value: test-infra
+      - name: PLANK_DEPLOYMENT_FILE # Just need a file contains an image tag
+        value: config/prod/prow/jobs/custom/test-infra.yaml
+      - name: COMPONENT_FILE_DIR
+        value: config/prod/prow/jobs # Let it bump twice is fine
+      - name: CONFIG_PATH
+        value: config/prod/prow/jobs/custom/test-infra.yaml # Trick autobump as this is required
+      - name: JOB_CONFIG_PATH
+        value: config/prod/prow/jobs
     volumes:
     - name: test-account
       secret:
@@ -309,10 +313,6 @@ periodics:
     - name: prow-auto-bumper-github-token
       secret:
         secretName: prow-auto-bumper-github-token
-    - name: prow-updater-robot-ssh-key
-      secret:
-        secretName: prow-updater-robot-ssh-key
-        defaultMode: 0400
 - cron: "0 */2 * * *" # Every other hour
   name: ci-knative-prow-jobs-syncer
   agent: kubernetes
