--- a/config/prod/prow/jobs/custom/test-infra.yaml
+++ b/config/prod/prow/jobs/custom/test-infra.yaml
@@ -270,7 +270,7 @@ periodics:
         secretName: flaky-test-reporter-slack-token
 - cron: "15 15-23 * * 1-5"  # Run at 7:15-15:15 PST (15:15 UTC) Mon-Fri
   name: ci-knative-prow-auto-bumper
-  cluster: prow-trusted
+  cluster: "build-knative"
   decorate: true
   extra_refs:
   - org: knative
