[Auto] Update prow jobs for release branches

--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -305,50 +305,6 @@ test_groups:
 - name: ci-knative-operator-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-operator-go-coverage
   short_text_metric: "coverage"
-- name: ci-knative-serving-0.12-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-serving-0.12-continuous
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  num_failures_to_alert: 3
-- name: ci-knative-serving-0.12-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-serving-0.12-dot-release
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  alert_stale_results_hours: 170
-  num_failures_to_alert: 1
-- name: ci-knative-client-0.12-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-client-0.12-continuous
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  num_failures_to_alert: 3
-- name: ci-knative-client-0.12-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-client-0.12-dot-release
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  alert_stale_results_hours: 170
-  num_failures_to_alert: 1
-- name: ci-knative-eventing-0.12-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.12-continuous
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  num_failures_to_alert: 3
-- name: ci-knative-eventing-0.12-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.12-dot-release
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  alert_stale_results_hours: 170
-  num_failures_to_alert: 1
-- name: ci-knative-eventing-contrib-0.12-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.12-continuous
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  num_failures_to_alert: 3
-- name: ci-knative-eventing-contrib-0.12-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.12-dot-release
-  alert_options:
-    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-  alert_stale_results_hours: 170
-  num_failures_to_alert: 1
 - name: ci-knative-serving-0.13-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.13-continuous
   alert_options:
@@ -498,6 +454,56 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-0.16-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.16-continuous
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-serving-0.16-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.16-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-0.16-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.16-continuous
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-0.16-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.16-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-contrib-0.16-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.16-continuous
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.16-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.16-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-net-istio-0.16-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-0.16-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-client-0.12-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.12-continuous
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-client-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.12-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-sandbox-sample-controller-continuous
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-sample-controller-continuous
   alert_stale_results_hours: 3
@@ -629,14 +635,14 @@ test_groups:
   num_failures_to_alert: 1
 - name: ci-knative-serving-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous-beta-prow-tests
-- name: ci-knative-serving-0.12-continuous-beta-prow-tests
-  gcs_prefix: knative-prow/logs/ci-knative-serving-0.12-continuous-beta-prow-tests
 - name: ci-knative-serving-0.13-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.13-continuous-beta-prow-tests
 - name: ci-knative-serving-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.14-continuous-beta-prow-tests
 - name: ci-knative-serving-0.15-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.15-continuous-beta-prow-tests
+- name: ci-knative-serving-0.16-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.16-continuous-beta-prow-tests
 - name: ci-knative-serving-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -662,27 +668,27 @@ test_groups:
   short_text_metric: "coverage"
 - name: ci-knative-eventing-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-continuous-beta-prow-tests
-- name: ci-knative-eventing-0.12-continuous-beta-prow-tests
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.12-continuous-beta-prow-tests
 - name: ci-knative-eventing-0.13-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.13-continuous-beta-prow-tests
 - name: ci-knative-eventing-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.14-continuous-beta-prow-tests
 - name: ci-knative-eventing-0.15-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.15-continuous-beta-prow-tests
+- name: ci-knative-eventing-0.16-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.16-continuous-beta-prow-tests
 - name: ci-knative-eventing-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
 - name: ci-knative-eventing-contrib-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-continuous-beta-prow-tests
-- name: ci-knative-eventing-contrib-0.12-continuous-beta-prow-tests
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.12-continuous-beta-prow-tests
 - name: ci-knative-eventing-contrib-0.13-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.13-continuous-beta-prow-tests
 - name: ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
 - name: ci-knative-eventing-contrib-0.15-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.15-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-0.16-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.16-continuous-beta-prow-tests
 - name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -1290,56 +1296,6 @@ dashboards:
   - name: coverage
     test_group_name: ci-google-knative-gcp-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
-- name: knative-0.12
-  dashboard_tab:
-  - name: serving-continuous
-    test_group_name: ci-knative-serving-0.12-continuous
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: serving-dot-release
-    test_group_name: ci-knative-serving-0.12-dot-release
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: client-continuous
-    test_group_name: ci-knative-client-0.12-continuous
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: client-dot-release
-    test_group_name: ci-knative-client-0.12-dot-release
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-continuous
-    test_group_name: ci-knative-eventing-0.12-continuous
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-dot-release
-    test_group_name: ci-knative-eventing-0.12-dot-release
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-contrib-continuous
-    test_group_name: ci-knative-eventing-contrib-0.12-continuous
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-contrib-dot-release
-    test_group_name: ci-knative-eventing-contrib-0.12-dot-release
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
-    num_failures_to_alert: 3
 - name: knative-0.13
   dashboard_tab:
   - name: serving-continuous
@@ -1508,6 +1464,64 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 3
+- name: knative-0.16
+  dashboard_tab:
+  - name: serving-continuous
+    test_group_name: ci-knative-serving-0.16-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: serving-dot-release
+    test_group_name: ci-knative-serving-0.16-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-0.16-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-dot-release
+    test_group_name: ci-knative-eventing-0.16-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-0.16-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-dot-release
+    test_group_name: ci-knative-eventing-contrib-0.16-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: net-istio-dot-release
+    test_group_name: ci-knative-net-istio-0.16-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+- name: knative-0.12
+  dashboard_tab:
+  - name: client-continuous
+    test_group_name: ci-knative-client-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: client-dot-release
+    test_group_name: ci-knative-client-0.12-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
 - name: google-0.12
   dashboard_tab:
   - name: knative-gcp-continuous
@@ -1569,9 +1583,6 @@ dashboards:
   - name: ci-knative-serving-continuous
     test_group_name: ci-knative-serving-continuous-beta-prow-tests
     base_options: "sort-by-failures="
-  - name: ci-knative-serving-0.12-continuous
-    test_group_name: ci-knative-serving-0.12-continuous-beta-prow-tests
-    base_options: "sort-by-failures="
   - name: ci-knative-serving-0.13-continuous
     test_group_name: ci-knative-serving-0.13-continuous-beta-prow-tests
     base_options: "sort-by-failures="
@@ -1580,6 +1591,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-knative-serving-0.15-continuous
     test_group_name: ci-knative-serving-0.15-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-serving-0.16-continuous
+    test_group_name: ci-knative-serving-0.16-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-serving-go-coverage
     test_group_name: ci-knative-serving-go-coverage-beta-prow-tests
@@ -1614,9 +1628,6 @@ dashboards:
   - name: ci-knative-eventing-continuous
     test_group_name: ci-knative-eventing-continuous-beta-prow-tests
     base_options: "sort-by-failures="
-  - name: ci-knative-eventing-0.12-continuous
-    test_group_name: ci-knative-eventing-0.12-continuous-beta-prow-tests
-    base_options: "sort-by-failures="
   - name: ci-knative-eventing-0.13-continuous
     test_group_name: ci-knative-eventing-0.13-continuous-beta-prow-tests
     base_options: "sort-by-failures="
@@ -1626,14 +1637,14 @@ dashboards:
   - name: ci-knative-eventing-0.15-continuous
     test_group_name: ci-knative-eventing-0.15-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-eventing-0.16-continuous
+    test_group_name: ci-knative-eventing-0.16-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-eventing-go-coverage
     test_group_name: ci-knative-eventing-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
   - name: ci-knative-eventing-contrib-continuous
     test_group_name: ci-knative-eventing-contrib-continuous-beta-prow-tests
-    base_options: "sort-by-failures="
-  - name: ci-knative-eventing-contrib-0.12-continuous
-    test_group_name: ci-knative-eventing-contrib-0.12-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-eventing-contrib-0.13-continuous
     test_group_name: ci-knative-eventing-contrib-0.13-continuous-beta-prow-tests
@@ -1643,6 +1654,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-knative-eventing-contrib-0.15-continuous
     test_group_name: ci-knative-eventing-contrib-0.15-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-eventing-contrib-0.16-continuous
+    test_group_name: ci-knative-eventing-contrib-0.16-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-eventing-contrib-go-coverage
     test_group_name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
